--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-torch
-torchvision
-tensorboardX
-easydict
-pandas
-numpy
-scipy
-matplotlib
-Pillow
-opencv-python
+h5py==3.1.0
+matplotlib==3.3.4
+numpy==1.19.2
+opencv_python==4.6.0.66
+pandas==2.2.2
+Pillow==10.4.0
+scipy==1.5.4
+tensorboardX==2.6.2.2
+torch==1.10.2
+torchvision==0.11.3
+tqdm==4.66.5
